# fx-durable-ga

./: .gitignore  Cargo.toml  DEDUPLICATE_PLAN.md  PLANNING.md  README.md  REFACTOR_SERVICE.md  SERVICE_TEST_PLAN.md  WARP.md  data  publish.sh
.config/: config.toml
.dev/: coverage.sh  truncate_all_tables.sh
.sqlx/: query-019d807a1bf407d3b8b37b01c17b99e0fad0b9c79fc878b27e08a724c6198bc5.json  query-02e981e6c4f336e75c6a4902d7fc555a5f03b5118214fa827dfc8949a585eb46.json  query-0688c25ef2f6c11eee4d25cabd1adade947c25b1a80cf37df5f393aeddfb37ad.json  query-09e3710ff1b7ad149a5b72d091ab4e216472056ee32bfe1b5412ff4950ee3ada.json  query-0bb2ef8aa15041b2cfd48acab4323482330d9a7f120c20ad11bcd4bc074f7c29.json  query-2949cff4f2d004cf7ec737d859d8985fd513c986c34e3571dc943b58baa921a5.json  query-2d4dfc5d944b40b8f830f7c19295bdbdb3a39c54a97611de345cf77b5954757f.json  query-326ca78871cfb47217755f109b164aff2aa29e364ee65fee0012b7c3c8b27c67.json  query-3c548e15de477cfaab719d3fbce2634e279b0c4cb051e0d02d4814d156c0ebf9.json  query-4e57d4ac97d1d6976b84b1ed9b8375df2f4a124bb0ec15ea168fadcfb8607b0e.json  query-4ffa5186bf8ccacbe34bab9a15f5e1ba2a62be3c09828605d5822b57513d0953.json  query-50b5d3bb11091a616b9074e830fe2f219bff73e128e4fd17f43d2ecf167d9e37.json  query-537cac78bc942249583709ceb60fea6236882677f457b6674744c62607ab8441.json  query-638066f79819cffbeb29f3033dbad4748093868cef24147e3f0efd9774c191cd.json  query-6506c280648281fde912f4ae02268b761d3d8a1c8513740bf9f15b86eed3308b.json  query-7b7d3a237fc3ff7860c231a24c67fb925a33316aa1a427a935b21948987e23f5.json  query-7d4ad2f219799104d4db5abfeeebb0abdb92a3e8c805696431906bba2de0da64.json  query-8dfb835c518a14b744c745628856bb927579699f2ac59caa5ba7be964d6b4969.json  query-9722686975b5f0ced301cfc83589283a267d00e5235dedb6f8edf92daf868da2.json  query-a3c4a4762b5fefc340f420dcc6e1d6c5c24b714e7a5c980ad9ad082ab02de810.json  query-b0cb43ab2e63651ee40e6359157eb6d41f46ed8db6fb280829e127e21dfcd4eb.json  query-d40e146b7c84ddff8540a6dd1c77492ea3d4525b309ae8631fcf0bfce82691d3.json  query-de717522fdb5d436f8d336419350a80f5efb15856b03dc3fdd5ca71338c901fb.json  query-e241b35c81302abb93d6ffe465dbb3fe3f35fcf89d12d7c67a210084bdfe2e6d.json  query-f697c9e46bac7aefdc5f5c5a732e3851df26a27424ce1d873139e599b5ac57a8.json
examples/: feature_engineering.rs  neural_architecture_search.rs  optimize_cube.rs  point_search.rs  regression_model.rs
examples/neural_architecture_search/: Cargo.toml
examples/neural_architecture_search/.sqlx/: query-2bd8b6a1bbf9391bcd7238e476a309a5991b3162407d895274f3e45fc1131517.json  query-4bdda14fbd75984c400d16ea8a7c6aa542293fd90a1d284b0daf6163e9aee23e.json  query-c39804460a2b51e7b4ae674efe0eacc8de68bff381c196ec7d6ed87d248b6bb9.json
examples/neural_architecture_search/examples/: neural_architecture_search.rs  regression.rs  test_architectures.rs  test_silent.rs
examples/neural_architecture_search/src/: dataset.rs  inference.rs  model.rs  training.rs
migrations/: 20251012055524_requests.down.sql  20251012055524_requests.up.sql  20251012070700_genotypes.down.sql  20251012070700_genotypes.up.sql  20251012104026_morphologies.down.sql  20251012104026_morphologies.up.sql  20251013190620_populations.down.sql  20251013190620_populations.up.sql  20251118074737_add_request_data_column.down.sql  20251118074737_add_request_data_column.up.sql  20251201051000_add_interrupted_conclusion_variant.down.sql  20251201051000_add_interrupted_conclusion_variant.up.sql
src/: bootstrap.rs  builder.rs  events.rs  gene.rs  jobs.rs  lib.rs  migrations.rs  registry.rs  registry_2.rs  service.rs
src/models/: breeder.rs  crossover.rs  distribution.rs  goal.rs  (+14 more)
tests/: interrupt_request_integration.rs
(+46 files in other folders)
