[package]
name = "fx-durable-ga"
version = "0.7.0"
edition = "2024"
authors = ["Jakob Lilliemarck <lilliemarckjakob@gmail.com>"]
description = "Durable GA event driven optimization loop on PostgreSQL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jakob-lilliemarck/fx-durable-ga"
keywords = ["genetic-algoritms", "parameter-search", "optimization"]
categories = ["algorithms", "science"]

[features]
default = []
migration = []

[dependencies]
uuid = { version = "1.14.0", features = ["serde", "v7"] }
thiserror = "2.0.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
tracing = "0.1.41"
rand = "0.9.2"
const-fnv1a-hash = "1.1"
futures = "0.3.31"
fx-mq-jobs = "~0.1.8"
fx-event-bus = "~0.1.9"
chrono = "0.4.39"
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "full",
    "tracing",
    "process"
] }
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

[[example]]
name = "point_search"
path = "examples/point_search.rs"

[[example]]
name = "regression_model"
path = "examples/regression_model.rs"

[[example]]
name = "feature_engineering"
path = "examples/feature_engineering.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
